--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "homepage": "https://github.com/SalamiTheMan/MNPD_RecognitionWeb#readme",
   "dependencies": {
+    "gh-pages": "^2.2.0",
     "http-server": "^0.11.1",
     "tesseract.js": "^2.1.1"
   }
